2012-12-09  Per Bothner  <per@bothner.com>

	* TypeVariable.java: @Override annotation should not be in comment.
	* ParameterizedType.java: Likewise.

2012-11-05  Per Bothner  <per@bothner.com>

	Fix bug in encodding of enum annotation values.  They should
	use the enum type's descriptor (signature), not "internal name".
	* AnnotationEntry.java (decodeEnumEntry): New static method.
	(print): Use it.
	* RuntimeAnnotationsAttr.java (assignConstants): Use decodeEnumEntry.
	* ClassType.java (nameToSignature): New static method.
	(setName): Use it.

2012-10-06  Per Bothner  <per@bothner.com>

	Change so reading a class cann detecte neverReturnsType easily.
	* Type.java (neverReturnsType): Change to use Type$NeverReturns.
	(NeverReturns): New helper class.

2012-09-27  Per Bothner  <per@bothner.com>

	* Field.java (setModifiers): New method.

2012-08-16  Per Bothner  <per@bothner.com>

	* ExitableBlock.java: When exiting, we may need to pop the stack.

2012-07-17  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitInvoke): Use invokespecial if method is private.
	Fixes Savannah bug #36856 "More Dalvik issues".

2012-06-19  Per Bothner  <per@bothner.com>

	* Label.java (isUsed): New method.

2012-04-22  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitFi): Fix logic for updating unreachability.

2012-02-03  Per Bothner  <per@bothner.com>

	* Field.java (hasConstantValueAttr): New method.

2012-01-27  Per Bothner  <per@bothner.com>

	* ExitableBlock.java (finish): If appropriate, do setUnreachabe().
	This fixes Savannah bug #35362: "endless loop + unused continuation".

2011-12-12  Per Bothner  <per@bothner.com>

	* Type.java (isInterface): New method.

2011-12-01  Per Bothner  <per@bothner.com>

	* ClassType.java (compare): Fix thinko.

	* ClassType.java (isSubclass): Add explicit test for Object.
	This is both for performance and it helps work around a bug in
	subtyping a not-yet resolved ClassExp.

2011-10-29  Jamison Hope  <jrh@theptrgroup.com>
