@@ -1,3 +1,9 @@
+2012-12-12  thomas kirk  <tk@research.att.com>
+
+	* ZipLoader.java (loadAllClasses): Don't load duplicate.
+	Fixes Savannah bug #37910 "gnu.bytecode.ZipLoader:loadAllClasses
+	not checking for previous definitions".
+
 2012-12-09  Per Bothner  <per@bothner.com>
 
 	* TypeVariable.java: @Override annotation should not be in comment.
